crates/sui/tests/snapshots/shell_tests__summaries__summarize_yaml.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/summaries/summarize_yaml.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

one move summary --path data/move_package -o yaml
ls -1 data/move_package/package_summaries
ls -1 data/move_package/package_summaries/move_package
ls -1 data/move_package/package_summaries/sui
ls -1 data/move_package/package_summaries/std
# NB: No root_package_metadata for source packages as these are not generated w.r.t. a specific network.
cat data/move_package/package_summaries/root_package_metadata.yaml
# This will contain the address mapping for the package from the literal value
# of the address to the named value of the address (which is what the source
# package metadata/move_package uses for storage).
cat data/move_package/package_summaries/address_mapping.yaml

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY SuiSystem
INCLUDING DEPENDENCY Sui
INCLUDING DEPENDENCY MoveStdlib
BUILDING move_package

Summary generation successful. Summaries stored in 'package_summaries'
address_mapping.yaml
bridge
move_package
root_package_metadata.yaml
std
sui
sui_system
move_package.yaml
address.yaml
authenticator_state.yaml
bag.yaml
balance.yaml
bcs.yaml
bls12381.yaml
borrow.yaml
clock.yaml
coin.yaml
config.yaml
deny_list.yaml
display.yaml
dynamic_field.yaml
dynamic_object_field.yaml
ecdsa_k1.yaml
ecdsa_r1.yaml
ecvrf.yaml
ed25519.yaml
event.yaml
groth16.yaml
group_ops.yaml
hash.yaml
hex.yaml
hmac.yaml
kiosk.yaml
kiosk_extension.yaml
linked_table.yaml
math.yaml
nitro_attestation.yaml
object.yaml
object_bag.yaml
object_table.yaml
package.yaml
party.yaml
pay.yaml
poseidon.yaml
priority_queue.yaml
prover.yaml
random.yaml
sui.yaml
table.yaml
table_vec.yaml
token.yaml
transfer.yaml
transfer_policy.yaml
tx_context.yaml
types.yaml
url.yaml
vdf.yaml
vec_map.yaml
vec_set.yaml
versioned.yaml
zklogin_verified_id.yaml
zklogin_verified_issuer.yaml
address.yaml
ascii.yaml
bcs.yaml
bit_vector.yaml
bool.yaml
debug.yaml
fixed_point32.yaml
hash.yaml
macros.yaml
option.yaml
string.yaml
type_name.yaml
u128.yaml
u16.yaml
u256.yaml
u32.yaml
u64.yaml
u8.yaml
uq32_32.yaml
uq64_64.yaml
vector.yaml
---
{}
---
"0x0000000000000000000000000000000000000000000000000000000000000000": move_package
"0x0000000000000000000000000000000000000000000000000000000000000001": std
"0x0000000000000000000000000000000000000000000000000000000000000002": sui
"0x0000000000000000000000000000000000000000000000000000000000000003": sui_system
"0x000000000000000000000000000000000000000000000000000000000000000b": bridge

----- stderr -----
